# XGboost_PSI

./: .gitignore  main.py  pyproject.toml
data/: psi_data_20260228_151055.csv  psi_data_20260228_162050.csv  psi_data_20260228_173302.csv  psi_data_20260228_175754.csv  psi_douyin_20260228_211328.csv  psi_douyin_20260228_213146.csv  psi_douyin_20260228_215103.csv  psi_douyin_20260228_221442.csv  psi_douyin_20260301_203427.csv  psi_douyin_20260301_205453.csv  psi_douyin_20260301_211527.csv  psi_douyin_20260301_213426.csv  psi_douyin_20260301_220936.csv
data_collect/: automate.py  automate_douyin_browse.py  psi_collector.sh  psi_collector_with_phase.sh  stress_douyin_browse.py  stress_scenario.py  test_collector.py
data_process/: data_check.ipynb  data_check_douyin.ipynb  data_process.ipynb  data_process_douyin.ipynb
inference_go/: go.mod
model/: best_spike_model.json  feature_cols.json  lstm_some.pt  model_comparison_meta.json  model_meta.json  spike_classifier.json  spike_classifier_meta.json  xgb_some.json  xgb_some_bag0.json  xgb_some_bag1.json  xgb_some_bag2.json  xgb_some_bag3.json  xgb_some_bag4.json
plot/: plot_some_full_delta.ipynb
processed_data/: processed_psi_data.csv  processed_psi_douyin.csv
train/: lstm.ipynb  some_classifier.ipynb  spike_classifier.ipynb  xgboost_full.ipynb  xgboost_some.ipynb
train/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
train/catboost_info/learn/: events.out.tfevents
train/catboost_info/test/: events.out.tfevents
